# slack-helper-bot

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START_DASHBOARD.md  README.md  TEST_COVERAGE.md  TEST_COVERAGE_REPORT.md  WEB_DASHBOARD.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
config/: channels.yaml
config/templates/: action.jinja2  bug.jinja2  feature_request.jinja2  how_to.jinja2
scripts/: run_tests.sh  setup.sh
src/: __init__.py  main.py
src/classifier/: __init__.py  question_classifier.py
src/config/: __init__.py  channel_config.py  settings.py
src/integrations/: __init__.py  email_client.py  jira_client.py
src/models/: action.py  audit.py  base.py  conversation.py  feedback.py
src/observability/: __init__.py  logging.py  metrics.py
src/rag/: __init__.py  rag_pipeline.py
src/slack/: __init__.py  bot.py
src/slack/handlers/: __init__.py  action.py  message.py  reaction.py
src/slack/services/: action_service.py  conversation_service.py  message_processor.py
src/web/: __init__.py  app.py
src/web/templates/: dashboard.html  logs.html
tests/: conftest.py
tests/integration/: test_database.py  test_slack_flow.py
tests/unit/: test_action_handler.py  test_action_service.py  test_channel_config.py  test_classifier.py  test_conversation_service.py  test_email_client.py  test_jira_client.py  test_message_handler.py  test_message_processor.py  test_models.py  test_reaction_handler.py  test_settings.py  test_web_app.py
