[project]
name = "slack-rag-assistant"
version = "0.1.0"
description = "A Slack bot that answers questions using RAG pipelines, executes actions, and manages issues"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Slack Integration
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",

    # Web Dashboard
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # LLM & RAG
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "tiktoken>=0.6.0",

    # Vector Store & Embeddings
    "pinecone-client>=3.0.0",
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",

    # Image Processing
    "pillow>=10.2.0",
    "pytesseract>=0.3.10",

    # Jira Integration
    "jira>=3.6.0",

    # Email
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.3",

    # Database & Async
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",

    # HTTP & Async
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Configuration & Environment
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",

    # Security & Privacy
    "cryptography>=42.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Utilities
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
